fix: adjust header spacing

--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -44,7 +44,7 @@ h6
 	font-family: $f_family_sans
 	line-height: 1.1em
 	clear: both
-	margin: $p_medium 0
+	margin: $p_medium 0 $p_small_med 0
 
 h1
 	font-size: 1.7em
@@ -109,7 +109,7 @@ ol
 
 ul
 	padding-left: 1.5em
-	list-style: circle
+	list-style: disc
 
 	ul
 		margin-top: 0
